--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: python
+dist: xenial
+sudo: required
 python:
+  - "3.5"
   - "3.6"
-  #- "3.7" 3.7 is not supported by travis: https://github.com/travis-ci/travis-ci/issues/9069
+  - "3.7" 
 install:
   - pip install pipenv
   - pipenv install --dev
