--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -11,13 +11,10 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
-        python-version: ['2.7', '3.5', '3.6', '3.7', '3.8', '3.9', '3.x']
+        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11', '3.x']
         include:
         - os: windows-latest
-          python-version: '3.9'
-          experimental: true
-        - os: ubuntu-latest
-          python-version: 'pypy-3.7'
+          python-version: '3.11'
           experimental: true
     steps:
     - uses: actions/checkout@v2
