Migrate to pyproject.toml and rye

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,34 +1,37 @@
----
+name: Tests
+
 on:
   push: ~
   pull_request: ~
 
 jobs:
-  tests:
+  test:
     name: Testing with ${{ matrix.python-version }} on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
+    continue-on-error: ${{ matrix.experimental }}
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
-        python-version: ['2.7', '3.5', '3.6', '3.7', '3.8', '3.9', '3.x']
+        python-version: ['3.9', '3.10', '3.11', '3.12', '3.x']
+        experimental: [false]
         include:
         - os: windows-latest
-          python-version: '3.9'
+          python-version: '3.x'
           experimental: true
         - os: ubuntu-latest
-          python-version: 'pypy-3.7'
+          python-version: 'pypy@3.10'
           experimental: true
-    steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Setup
-      run: |
-        pip install pipenv
-        pipenv install --dev
-    - name: Run tests
-      continue-on-error: ${{ matrix.eperimental }}
-      run: pipenv run make test          
 
+    steps:
+    - uses: actions/checkout@v4
+    - name: Install rye
+      uses: eifinger/setup-rye@v4
+      with:
+        enable-cache: true
+    - name: Pin current Python version
+      run: rye pin ${{ matrix.python-version }} && rye run python --version
+    - name: Install dependencies
+      run: rye sync
+    - name: Run tests
+      run: rye run pytest
